# bitmix

./: .gitignore  LICENSE  README.md  main.py  models.py  requirements.txt  setup.cfg  setup.py
bitmix/nn/: functional.py
bitmix/ptq/: __init__.py  modules.py  networks.py
bitmix/qat/: __init__.py  activations.py  modules.py  networks.py
bitmix/utils/: __init__.py  grad.py  grouping.py  module_tools.py  quant.py
utils/: quant.py
