[metadata]
name = bitmix
version = 0.0.1
author = Brendan Reidy
author_email = brendanreidy16@gmail.com
description = For quantiing PyTorch models with QAT and PTQ
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iCAS-Lab/bitmix
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True